--- a/shop.html
+++ b/shop.html
@@ -33,8 +33,6 @@
 
 
 <section id="product1" class="section-p1">
-    <h2>featured products</h2>
-    <p>what others love</p>
     <div class="pro-container">
         <div class="pro">
             <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
@@ -53,216 +51,7 @@
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="pro">
-            <img src="https://i.ibb.co/d2PCKzs/fern.webp">
-            <div class="des">
-                <span>areca palm</span>
-                <h5>idk anything</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/s34sDz1/cactus.jpg">
-            <div class="des">
-                <span>holiday cactus</span>
-                <h5>random text</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/W680TXH/snake.jpg">
-            <div class="des">
-                <span>snake plant</span>
-                <h5>thing</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/HdXtyHd/brubber.jpg">
-            <div class="des">
-                <span>Burgandy Rubber</span>
-                <h5>plant</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/RyqQprk/bofparadi.jpg">
-            <div class="des">
-                <span>bird of paradise</span>
-                <h5>Lovely Flowering Plant</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/VCnMJWh/monkeytree.jpg">
-            <div class="des">
-                <span>monkey tree</span>
-                <h5>tree or smth</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/zhCXTMD/goldeenp.webp">
-            <div class="des">
-                <span> golden pothos</span>
-                <h5>vine</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-
-        <div class="pro">
-            <img src="https://i.ibb.co/47yTb0y/mari.jpg">
-            <div class="des">
-                <span>marigold</span>
-                <h5>paml thingy</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/kyYVTZS/diris.jpg">
-            <div class="des">
-                <span>dwarf iris</span>
-                <h5>Lovely Flowering Plant</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/hR6HjkL/earlyglory.jpg">
-            <div class="des">
-                <span>early glory lily</span>
-                <h5>Lovely Flowering Plant</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/LkTHjhy/grapehyacinths.jpg">
-            <div class="des">
-                <span>grape hyacinth</span>
-                <h5>Lovely Flowering Plant</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/5cyydbw/ssquill.jpg">
-            <div class="des">
-                <span>siberian squill</span>
-                <h5>Lovely Flowering Plant</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/SmvQ10s/lilyotv.jpg">
-            <div class="des">
-                <span>lily of the valley</span>
-                <h5>Lovely Flowering Plant</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/BtX11WJ/croc.jpg">
+            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
             <div class="des">
                 <span>peace lily</span>
                 <h5>Lovely Flowering Plant</h5>
@@ -278,9 +67,218 @@
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="pro">
-            <img src="https://i.ibb.co/TkC4QGM/trillium.jpg">
+            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
             <div class="des">
-                <span>trillium</span>
+                <span>peace lily</span>
+                <h5>Lovely Flowering Plant</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <div class="des">
+                <span>peace lily</span>
+                <h5>Lovely Flowering Plant</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <div class="des">
+                <span>peace lily</span>
+                <h5>Lovely Flowering Plant</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <div class="des">
+                <span>peace lily</span>
+                <h5>Lovely Flowering Plant</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <div class="des">
+                <span>peace lily</span>
+                <h5>Lovely Flowering Plant</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <div class="des">
+                <span>peace lily</span>
+                <h5>Lovely Flowering Plant</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        
+        <div class="pro">
+            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <div class="des">
+                <span>peace lily</span>
+                <h5>Lovely Flowering Plant</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <div class="des">
+                <span>peace lily</span>
+                <h5>Lovely Flowering Plant</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <div class="des">
+                <span>peace lily</span>
+                <h5>Lovely Flowering Plant</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <div class="des">
+                <span>peace lily</span>
+                <h5>Lovely Flowering Plant</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <div class="des">
+                <span>peace lily</span>
+                <h5>Lovely Flowering Plant</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <div class="des">
+                <span>peace lily</span>
+                <h5>Lovely Flowering Plant</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <div class="des">
+                <span>peace lily</span>
+                <h5>Lovely Flowering Plant</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <div class="des">
+                <span>peace lily</span>
                 <h5>Lovely Flowering Plant</h5>
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -303,3 +301,4 @@
     <script src="script.js"> </script>
 </body>
  </html>
+
