--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 <section id="header">
-     <a href="#"> <img src="#" width="65%" height="65%"><class="logo" alt="SnapDragon"></a>
+     <a href="#"> <img src="https://i.ibb.co/M2JtTzW/heroimg.jpg" width="15%" height="15%"><class="logo" alt="SnapDragon"></a>
 
      <div>
          <ul id="navbar">
@@ -21,9 +21,14 @@
              <li><a href="blog.html">Blog</a></li> 
              <li><a href="about.html">About</a></li> 
              <li><a href="contact.html">Contact</a></li> 
-             <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>  
+             <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+             <a href="#" id="close"><i class="fa-solid fa-x"></i></a>
          </ul>
      </div>
+     <div id="mobile">
+            <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+            <i id="bar" class="fas fa-outdent"></i>
+        </div>
 </section>
 
 <section id="hero">
