--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 <section id="header">
-     <a href="#"> <img src="https://i.ibb.co/M2JtTzW/heroimg.jpg" width="15%" height="15%"><class="logo" alt="SnapDragon"></a>
+     <a href="#"> <img src="#" width="15%" height="15%"><class="logo" alt="SnapDragon"></a>
 
      <div>
          <ul id="navbar">
